<resources>
    <string name="app_name">Weather</string>
    <string name="address">Address</string>
    <string name="day_month_year">T.5 13 Th2, 2020</string>
    <string name="time">14:44</string>
    <string name="_100">100</string>
    <string name="o">O</string>
    <string name="_37">37</string>
    <string name="cloudy">Cloudy</string>
    <string name="maximum">Maximum</string>
    <string name="cloud">Cloud</string>
    <string name="exact_details_now">Exact details now</string>
    <string name="humidity">Humidity:</string>
    <string name="probability_of_rain">Probability of rain</string>
    <string name="amount_of_cloud">Amount of cloud</string>
    <string name="wind_speed">Wind speed</string>
    <string name="uv_index">UV index</string>
    <string name="the_temperature_of_the_day">The temperature of the day</string>
    <string name="the_amount_of_wind_during_the_day">The amount of wind during the day</string>
    <string name="precipitation_of_the_day">Precipitation of the day</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="hide_wallpaper">Hide wallpaper</string>
    <string name="home">Home</string>
    <string name="facebook">Facebook</string>
    <string name="likedin">Likedin</string>
    <string name="contact_us">Contact us</string>
    <string name="setting">Setting</string>
    <string name="c">°C</string>
    <string name="m_s">m/s</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_day_after">7 day after</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_a_place">Search for a place</string>
</resources>
