<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group>-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_temp"
            android:icon="@drawable/ic_thermometer_1"
            android:title="@string/temperature" />

        <item
            android:id="@+id/nav_wind"
            android:icon="@drawable/ic_wind_nav"
            android:title="@string/wind" />

        <item
            android:id="@+id/nav_on_off_background"
            android:icon="@drawable/ic_photo"
            android:title="@string/hide_wallpaper" />

<!--    </group>-->

    <item android:title="@string/contact_us">

        <menu>
            <item
                android:id="@+id/nav_face"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />

            <item
                android:id="@+id/nav_likedin"
                android:icon="@drawable/ic_linkedin"
                android:title="@string/likedin" />

        </menu>
    </item>


</menu>