<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bg_today_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/layout_bg_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_weather_detail"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintBottom_toBottomOf="@id/bg_today_detail"
        app:layout_constraintStart_toStartOf="@id/bg_today_detail"
        app:layout_constraintTop_toTopOf="@id/bg_today_detail" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/im_weather_detail"
        app:layout_constraintTop_toTopOf="@id/bg_today_detail" />

    <TextView
        android:id="@+id/tv_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/probability_of_rain"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/im_weather_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

    <TextView
        android:id="@+id/tv_amount_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/amount_of_cloud"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/im_weather_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_rain" />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/wind_speed"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/im_weather_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_amount_cloud" />

<!--    Chỉ số tia cực tím-->
    <TextView
        android:id="@+id/tv_uv_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/uv_index"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/im_weather_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_speed" />


</androidx.constraintlayout.widget.ConstraintLayout>